优化代码结构

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>前端</title>
+  <title>方正前端</title>
+  <script src="<%= publicPath %>config/systemConfig.js"></script>
 </head>
 <body>
 <div id="root"></div>
